         A. C. George [aut], & A. Uenlue [aut]

mailto:
a.robitzsch /-\ bifie.at

For reporting a bug, please always provide a reproducible R script 
and (if necessary) a corresponding dataset.

URL:
https://sites.google.com/site/alexanderrobitzsch/software

++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++


--------------------------------------------------------------
CDM 4.3 (2015-06-05)   --  CRAN CDM 4.3-0
--------------------------------------------------------------

NOTE  * included t and p values in 'IRT.jackknife.gdina'
FIXED * fixed bugs in 'summary.gdina' and 'gdina' due to
        computational problems in standard error calculation

DATA  * included/modified datasets: ---
EXAMP * included/modified examples: ---

--------------------------------------------------------------
CDM 4.2 (2015-02-23)   --  CRAN CDM 4.2-12
--------------------------------------------------------------

FIXED * fixed the ignorance of the 'centered.latent' argument 
        in the 'gdm' function
ADDED * included S3 methods 'IRT.expectedCounts' for extracting
        expected counts and 'IRT.data' for extracting the used
        item response dataset
ADDED * included general plotting function for item response
        functions 'IRT.irfprobPlot'. This function can be used 
        with both lattice and graphics packages.        
ADDED * included S3 method 'predict' (and function 'IRT.predict')
        for computing expected values and residuals for
        fitted models in CDM        
NOTE  * added attributes group and weights to 'IRT.data' value 
NOTE  * added a summary method for 'IRT.compareModels'
NOTE  * changed output of posterior in 'gdina'
ADDED * included function 'IRT.repDesign' for constructing 
        replicate designs
ADDED * added arguments for fixing and initial parameters in
        'gdina' function 
NOTE  * added parameter table and matrix of polychoric correlations
        among skills in 'gdina' output 