@@ -1,5 +1,5 @@
-93b30ae833627729d72862f178ff46c9 *DESCRIPTION
-479de030e87de0f47dcd14b0aa69c72d *NAMESPACE
+02240401a39a14fd2faf6bf9f0e53213 *DESCRIPTION
+23d7252b6b3ace5555d9a7d309bb8452 *NAMESPACE
 316eca8e8b497cca1765bc443e030529 *R/IRT.IC.R
 e9d4ca853001a0f64c35fa9990c83447 *R/IRT.anova.R
 ecf2f65242ed6b68cb9198d53f7706be *R/IRT.compareModels.R
@@ -35,17 +35,17 @@ ad0593bb2a4577beb2d51e73427e3b2a *R/din.partable.R
 58de9bbe5aa2915db91891174b3d3be1 *R/equivalent.dina.R
 6b7e8d6229c5fe8f1499b758cf3621dd *R/equivalent.skillclasses.R
 ccee1183156503948fece10febc56320 *R/gdd.R
-396b1bd1b948452a552f809cf35c9158 *R/gdina.R
-ab93854afcd2504e394d1bf794453351 *R/gdina.dif.R
-b74c74aaeb4652a41f3218d06c9c3fed *R/gdina.dif_aux.R
+2ed4af4d2ab69b72d8f21e7456b03970 *R/gdina.R
+f866b96dbada12af6ad4e2185c83468d *R/gdina.dif.R
+60dd7160335be21bb846f9f7f3542693 *R/gdina.dif_aux.R
 fb06eec4d34beb55b585c452881244b7 *R/gdina.partable.R
 3624ed48f363ec153f671d9667a6e12d *R/gdina.postproc.R
 2554f52a014548a6214df66b17235633 *R/gdina.wald.R
 e1ac34b70a49f535495072f4692609ba *R/gdina_aux.R
 c1f09321b613c5d832bc56f67128417b *R/gdina_designmatrices.R
-72a6f53bede16b2718ce19f0c9ef02f1 *R/gdina_hogdina_alg.R
+81526887e59e61261e78efbc92fc2ce8 *R/gdina_hogdina_alg.R
 5d460efe26e5a3161c3da2083f8712cf *R/gdina_reduced_skillspace.R
-cce6288c9d7c051d02ef70c9e5308b8a *R/gdm.R
+a82bdfa76e266598e4db2f488d4afd79 *R/gdm.R
 c815469c6f2757abe46b7034b28f52c9 *R/gdm_algorithm.R
 8d137bc2bd14c6ce4f96c49bf7c9e5d0 *R/gdm_postproc.R
 464fb794d211f27b5db342560804092e *R/gdm_preproc.R
@@ -78,9 +78,10 @@ b46159bdd8c4c77598afafcd7d50fd7c *R/print.gdm.R
 919d00255a6e7e6ed502587948ead714 *R/print.summary.din.R
 d9c6a90fa7f497f269799424a23494d9 *R/rowMaxs.R
 b2d7f865773b78d2296ff17e0e1600a2 *R/rowProds.R
-e27fbda33ae101522a7ddae647edf62c *R/sequential.items.R
+8e2cb47326e8fe3d576a3c05e22b579e *R/rrum.param.R
+fc6f25fa982484a95a8c632aafe00ab1 *R/sequential.items.R
 c40656e85728754f1730a83feded3159 *R/sim.din.R
-f7a5274cbfc90e8acc1b4b17bdfb9e6e *R/sim.gdina.R
+f50751a92fee5fed07b20f1cdf85d9fe *R/sim.gdina.R
 869bb4fddaf4b219252cd4ed1d876c92 *R/skill.cor.R
 d5ff07a47ec41d92b709b87d445cf1e5 *R/skillspace.approximation.R
 218d5254c26f37aeb64c68e25d158498 *R/skillspace.hierarchy.R
@@ -88,7 +89,7 @@ d5ff07a47ec41d92b709b87d445cf1e5 *R/skillspace.approximation.R
 23f908311952113d4c9c6e5fab169bd2 *R/slca.algorithm.R
 e703afb69e8488ba943844f6b47f43ed *R/slca.postprocess.R
 60186283b08845e96e7327579d571e84 *R/summary.din.R
-964e9d555f22cdb592eeee48fc0f6bac *R/summary.gdina.R
+f053ee4edd3fd5e978080fd44f771796 *R/summary.gdina.R
 72025448de6da246b8ffc1956bde682f *R/summary.gdm.R
 73ad7ceb28f2e07679f80ccaf0fb284d *R/summary.mcdina.R
 dc569a149b1f1f2e9fbea031eddc1c99 *R/summary.slca.R
@@ -117,8 +118,8 @@ fa6cfbff6340d5031a53ed38198322d4 *data/fraction.subtraction.data.rda
 b425982d9f83591b0ce4391a56058ea5 *data/sim.dina.rda
 7711c1e53bf6b0278fb7e1912cb11885 *data/sim.dino.rda
 4bf2a85b846dcad222c6039acf4f0b20 *data/sim.qmatrix.rda
-913589191665857ddb0d9052cfda96c7 *inst/NEWS
-c9187ea6c9c1feadc441feb68d18bb99 *man/CDM-package.Rd
+27ddcaa4c71b432b188490a5a01594d2 *inst/NEWS
+a339be626ad1e76ad0b2e624cf97a26b *man/CDM-package.Rd
 b5f7134425fec8f417115287dc1fdffc *man/Data-sim.Rd
 fb462fcd21787db3f2e793d606fb46d5 *man/IRT.IC.Rd
 c1bdbe46a853a96889e7a1e46d5a0f6b *man/IRT.anova.Rd
@@ -153,8 +154,8 @@ f26289b4996f93b1bd57fb803f6c5238 *man/data.sda6.Rd
 90f2845a5d63c3fbbf49a3172b1a2f55 *man/data.timss03.G8.su.Rd
 cf82f54934d17902d8b6d4be11aad690 *man/data.timss07.G4.lee.Rd
 e2239aed26b49baab9c23b6e1f86f851 *man/data.timss11.G4.AUT.Rd
-4dc922dfb19d1502d3f1daf23a0ed7f1 *man/din.Rd
-db29c92fe62a51031450e9ab70efd987 *man/din.deterministic.Rd
+32fe60e5b4e369149d88260dbf4e931b *man/din.Rd
+0b96e8efe9b8e61212b649a5a19084b7 *man/din.deterministic.Rd
 e6443cf29c924576b1ff71ca4eefdcd9 *man/din.equivalent.class.Rd
 d36e95abd681f544d959aa85e95517b1 *man/din.validate.qmatrix.Rd
 b902eb7b1b186e591994d17a5bd016a0 *man/entropy.lca.Rd
