@@ -25,6 +25,17 @@ https://sites.google.com/site/alexanderrobitzsch/software
 
 
 --------------------------------------------------------------
+CDM 4.4 (2015-07-01)   --  CRAN CDM 4.4-1
+--------------------------------------------------------------
+
+FIXED * fixed a bug in function 'sequential.items'
+
+DATA  * included/modified datasets: ---
+EXAMP * included/modified examples: ---
+
+
+
+--------------------------------------------------------------
 CDM 4.3 (2015-06-05)   --  CRAN CDM 4.3-0
 --------------------------------------------------------------
 
